

# where to put generated libraries
set(LIBRARY_OUTPUT_PATH "${BUILD_DIR}/src/meta-service")

# where to put generated binaries
set(EXECUTABLE_OUTPUT_PATH "${BUILD_DIR}/src/meta-service")

# set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lfdb_c -L${THIRDPARTY_DIR}/lib")

add_library(MetaService
    meta_server.cpp
    meta_service.cpp
    meta_service_job.cpp
    txn_kv.cpp
    codec.cpp
    keys.cpp
    doris_txn.cpp
    mem_txn_kv.cpp
)

# vim: et tw=120 ts=4 sw=4 cc=80:
